--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
   <title>
-    first page
+  my  first web page
     </title>
 <body>
-hellooooooooooooooooooooooo
+hello sidhu & krish
 </body>
 </html>
