--- a/index.html
+++ b/index.html
@@ -1,88 +1,21 @@
+<?php
+if( $_GET['password']=="admin")
+{	echo ("hai");}
+else 
+	echo ("invalid"); 
+?>
 
-<!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+
 <html>
-<head>
-  <title>My Website of www.website-templates.info</title>
-  <meta http-equiv="content-type" content="TEXT/HTML; CHARSET=UTF-8">
-  <meta name="keywords" content="keywords">
-  <meta name="description" content="description">
-  <meta name="author" content="">
-  <meta name="language" content="de">
-  <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="style.css" type="text/css">
-</head>
-<body>
-<table align="center" border="0" cellpadding="0" cellspacing="0" width="950">
-   <tr>
-     <td  colspan="4" height="20px">&nbsp;</td>
-   </tr>
-   <tr>
-   <td width="20px">&nbsp;</td>
-      <td class="oben" colspan="2">
-        <div class="logo"><img src="images/testlogo.gif" width="180" height="130" border="0" alt=""></div><div id="textobengross">My beautiful new website</div>
-        <div id="textobenklein">Here you find all information you need</div></td>
-      <td width="20px">&nbsp;</td>
-   </tr>
-   <tr>
-      <td width="20px">&nbsp;</td>
-      <td id="navioben" colspan="2"><div class="headernavi"><a href="index.html">Link 1</a><a href="page2.html">Link 2</a><a href="#">Link 3</a><a href="#">Link 4</a><a href="#">Link 5</a><a href="#">Link 6</a><a href="#">Link 7</a></div></td>
-      <td width="20px">&nbsp;</td>
-    </tr>
-    <tr>
-      <td width="20px">&nbsp;</td>
-      <td class="zwischen" colspan="2">&nbsp;</td>
-      <td width="20px">&nbsp;</td>
-    </tr>
-   <tr> <td width="20px">&nbsp;</td>
-     <td valign="top" class="links"><div class="naviueberschrift">Title 1</div>
-        <div class="zwischen2">&nbsp;</div>
-        <ul class="menue">
-          <li><a title="Home" href="index.html">&raquo; Home</a></li>
-          <li><a title="Page 2" href="page2.html">&raquo; Page 2</a></li>
-          <li><a title="Page 3" href="#">&raquo; Page 3</a></li>
-          <li><a title="Page 4" href="#">&raquo; Page 4</a></li>
-          <li><a title="Page 5" href="#">&raquo; Page 5</a></li>
-          <li><a title="Page 6" href="#">&raquo; Page 6</a></li>
-        </ul>
-      </td>
-      <td class="hauptfenster" valign="top"><div class="haupttext">
-        <h1>H1-Heading</h1>
+<form method="GET" type="">
+<input name="text" type="text"/><br>
+<input name="password" type="password"/>
+<input name="login" type="submit"value="login"/>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus bibendum lacus ac elit ornare sagittis. Nam faucibus pharetra erat a adipiscing. Morbi ultrices commodo nibh vitae convallis. Sed a arcu id dui feugiat mollis.</p>
 
-<h2>H2-Heading</h2>
 
-<p>Donec vel libero erat. Duis lacinia turpis vitae neque tincidunt nec hendrerit urna tristique. Pellentesque ultrices, nulla id pulvinar ultricies, dolor ante feugiat felis, non venenatis augue arcu non nunc.</p>
+</form>
 
-<h3>H3-Heading</h3>
 
-<p>Integer commodo dapibus metus at blandit. Etiam et magna sit amet elit lobortis tempor. Maecenas vitae dolor vitae nunc elementum vehicula. Maecenas et diam enim, non aliquam libero.</p>
-
-<h4>H4-Heading</h4>
-
-<p>Aenean facilisis ultricies eros et pretium. Morbi a est magna. Etiam convallis sollicitudin augue. Nunc dapibus eros vel enim vehicula non ultrices tortor tincidunt. Donec nunc lectus, ullamcorper nec mattis eu, dictum in nibh. Donec sagittis ultrices sagittis.</p>
-
-<h5>H5-Heading</h5>
-
-<p>Aliquam cursus volutpat lorem, eu aliquam magna venenatis quis. Donec vitae sagittis eros. Fusce semper convallis ligula, non consectetur ante lacinia vitae. Morbi elementum orci ac nisl aliquet pretium sit amet eu lectus. Praesent egestas sem vel justo fringilla a luctus velit gravida.</p>
-
-<hr noshade size="1">
-
-<h4>This template is linkware</h4>
-
-        <p>That means:</p>
-
-        <ul>
-          <li>You may use this template free of charge if the link to www.website-templates.info remains unchanged. Please read the <a href="http://www.website-templates.info/terms-of-use.html" target="_blank">terms for free use</a> to read all details. With download of this template you accept these rules.</li>
-        </ul>
-        </div></td>
-        <td width="20px">&nbsp;</td>
-   </tr>
-   <tr>
-     <td  colspan="4" height="20px">&nbsp;</td>
-   </tr>
-</table>
-<!--Start: This code may not be removed or changed in the free of charge version!-->
-<div align="center"><a class="copyright" style="color:#FF9E28;background-color:#990134;font-weight:normal" href="http://www.website-templates.info" target="_blank">Free Website Templates</a></div> <!--End: This code may not be removed or changed in the free of charge version!-->
-</body>
 </html>
