--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
-<?php
-if( $_GET['password']=="admin")
-{	echo ("hai");}
-else 
-	echo ("invalid"); 
-?>
+<!doctype html>
+<html lang="en">
+<head>
 
+<title>My Favorite Cookies</title>
 
+<link href="style.css" rel="stylesheet" type="text/css" />
 
-<html>
-<form method="GET" type="">
-<input name="text" type="text"/><br>
-<input name="password" type="password"/>
-<input name="login" type="submit"value="login"/>
+</head>
 
+<body>
 
+<!-- WEB PAGE CONTENT HERE -->
 
-</form>
+<div class="pageContainer">
+  <div class="imageContainer"> 
+    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
+  </div>
+  <div class="textContainer">
+    <h1>Cookies!</h1>
+    <p>My Favorite Cookies: </p>
+    <ul>
+      <li>Chocolate Chip</li>
+      <li>Peanut Butter</li>
+      <li>Christmas</li>
+    </ul>
+  </div>
+</div>
 
-
+</body>
 </html>
