--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 
 <body>
 
-<!-- WEB PAGE CONTENT HERE -->
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<style>
+  .red-text {
+    color: red;
+  }
 
-<div class="pageContainer">
-  <div class="imageContainer"> 
-    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
-  </div>
-  <div class="textContainer">
-    <h1>Cookies!</h1>
-    <p>My Favorite Cookies: </p>
-    <ul>
-      <li>Chocolate Chip</li>
-      <li>Peanut Butter</li>
-      <li>Christmas</li>
-    </ul>
-  </div>
-</div>
+  h2 {
+    font-family: Lobster, Monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: Monospace;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+
+<img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. ">
+
+<p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+<p class="red-text">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
 
 </body>
 </html>
