--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
     font-size: 16px;
     font-family: Monospace;
   }
+  .thick
+  {
+    border-color: orange;
+    border-width: 30px;
+    border-style:solid;
+    border-radius:70px;
+  }
 </style>
 
 <h2 class="red-text">CatPhotoApp</h2>
 
-<img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. ">
+<img class=".thick" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/13507144_974449179342615_3188095511778548423_n.jpg?oh=c7c6c6827d419b023afa65bc446ac2b2&oe=589848FC">
 
 <p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
 <p class="red-text">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
