--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>My Favorite Cookies</title>
+<title>Vishnu ns</title>
 
 <link href="style.css" rel="stylesheet" type="text/css" />
 
@@ -37,7 +37,7 @@
   }
 </style>
 
-<h2 class="red-text">CatPhotoApp</h2>
+<h2 class="red-text">Vishnu N S</h2>
 
 <img class="thick smaller-image" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/13507144_974449179342615_3188095511778548423_n.jpg?oh=c7c6c6827d419b023afa65bc446ac2b2&oe=589848FC">
 
