--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 Accord Template
 http://www.templatemo.com/tm-478-accord
 -->
-    <title>Accord - Free Bootstrap Template</title>
+    <title>The deadly alfarian</title>
 </head>
 
 <body>
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-478-accord
                                                 </div>                                      
                                             </div>
                                         </div>
-                                        <p class="bottom-desc">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. </p><hr />
+                                        <p class="bottom-desc"> being sanghi is awesome! Sanghying is life! Sanghis are true love! Sanghi Forever <3 <3 <3 </p><hr />
                                         <div class="col-sm-12 location-main"> 
                                             <div class="pull-right bottom-user">
                                                 <a href="#"><i class="fa fa-caret-right"></i><span>READ MORE</span></a>
@@ -208,7 +208,7 @@ http://www.templatemo.com/tm-478-accord
             </div> <!-- .row -->           
             <footer class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 footer">
-                    <p class="copyright">Copyright © 2016 Company Name</p>
+                    <p class="copyright">Copyright © 2016 Alfarians</p>
                 </div>    
             </footer>  <!-- .row -->      
         </div> <!-- .container -->
