--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ http://www.templatemo.com/tm-478-accord
                                             <button type="button" class="">SAGITIS SELIT</button>
                                         </div>
                                     </div>
-                                    <img src="images/home-img-1.png" alt="Image" class="img-responsive">
+                                   <!-- <img src="images/home-img-1.png" alt="Image" class="img-responsive">-->
                                 </div>                        
                             </div>    
                         </div>
