--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@ http://www.templatemo.com/tm-478-accord
                                 <div class="banner-main-home">                                
                                     <div class="banner-main-home-text">
                                         <div class="heading">
-                                            <h1>ACCORD</h1>
-                                            <p class="text-uppercase">Proin gravida nibhISI</p>
+                                            <h1>Alfarians</h1>
+                                            <p class="text-uppercase">da ivide enthu ezhuthum</p>
                                         </div>
                                         <div class="desc">
-                                            <p>This is free Bootstrap v3.3.6 website theme brought to you by templatemo. Feel free to use it. Please tell your friends about it. Images are provided by <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
-                                            <button type="button" class="">SAGITIS SELIT</button>
+                                            <p>ivide discriptin ezhuthanam
                                         </div>
                                     </div>
                                    <!-- <img src="images/home-img-1.png" alt="Image" class="img-responsive">-->
