--- a/about.html
+++ b/about.html
@@ -105,11 +105,11 @@ http://www.templatemo.com/tm-478-accord
                                     <div class="banner-main-about-text">
                                         <div class="heading2">
                                             <p>WELCOME TO</p>
-                                            <h1>ACCORD</h1>
+                                            <h1>Alfarians</h1>
                                         </div>
                                         <div class="desc2">
                                             <ul>
-                                                <li>This is free Bootstrap theme by templatemo.</li>
+                                                <li>വാടാ പൊളിക്കാം</li>
                                                 <li>Proin gravida nibh vel velit.</li>
                                                 <li>Aenean sollicitudin lorem quis.</li>
                                                 <li>bibendum auctor, nisi elitnsequat ipsum.</li>
